--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-numpy==1.18.1
-torch==1.5.0
-torchvision==0.6.0
+scipy==1.4.1
+torch==1.8.1
+torchvision==0.9.1
 tqdm==4.46.0
 pandas==1.0.3
 h5py==2.10.0
+quantities==0.12.4
